--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,4 @@
-imageio==2.5.0
-numpy==1.20.1
-opencv-python==4.5.1.48
-Pillow==8.1.2
+imageio==2.37.0
+numpy==2.2.6
+opencv-python==4.12.0.88
+pillow==11.3.0
